# dsca

lab1/: docker-compose.yml
lab1/client/: Dockerfile
lab1/server/: Dockerfile
lab2/: report.md
lab3/: report.md
midterm-p1/: pyproject.toml
midterm-p1/chord-part-1/chord/: chord  test_script.py
midterm-p1/chord-part-1/chord/src/: rpcs.h
