[tool.poetry]
name = "midterm-p1"
version = "0.1.0"
description = ""
authors = ["andre.liang <namwoam@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
msgpack-rpc-python = "^0.4.1"
backports-weakref = "^1.0.post1"
backports-ssl-match-hostname = "^3.7.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
